kubernetes/apps/network/envoy-gateway/config/redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: internal-http-to-https
  namespace: network
spec:
  parentRefs:
    - name: internal
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
